fixes download path

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/public/favicon-32x32.png">
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,15 +14,15 @@
   <div class="container">
     <img src="/public/logo.png" alt="Beefy Bun" class="logo">
     <h1 class="heading">Menu</h1>
-    <a href="" download="/public/main.png" class="download">Download</a>
+    <a href="/public/main.png" download class="download">Download</a>
     <i class="arrow down"></i>
     <img class="menuimg mainmenu" src="/public/main.png" alt="main menu" />
     <hr />
-    <a href="" download="/public/maindeals.png" class="download">Download</a>
+    <a href="public/maindeals.png" download class="download">Download</a>
     <i class="arrow down"></i>
     <img class="menuimg mainmenudeals" src="/public/maindeals.png" alt="main menu deals" />
     <hr />
-    <a href="" download="/public/familydeals.png" class="download">Download</a>
+    <a href="public/familydeals.png" download class="download">Download</a>
     <i class="arrow down"></i>
     <img class="menuimg familydeals" src="/public/familydeals.png" alt="family deals" />
     <hr />
